--- a/prototype.cabal
+++ b/prototype.cabal
@@ -1,41 +1,33 @@
-name:                prototype
+name:                Prototype
 version:             0.1.0.0
-synopsis:            Initial project template from stack
+synopsis:            Protobuf3 for hs
 description:         Please see README.md
-homepage:            http://github.com/githubuser/prototype#readme
+homepage:            http://github.com/topos-house/prototype
 license:             BSD3
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2010 Author Here
+author:              Sebastian Zany, Joseph Cpx
+maintainer:          abovemind@gmail.com
+-- copyright:           
 category:            Web
 build-type:          Simple
--- extra-source-files:
+-- extra-source-files:  
 cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     Proto3
   build-depends:       base >= 4.7 && < 5
+                     , parsec 
   default-language:    Haskell2010
 
-executable prototype-exe
-  hs-source-dirs:      app
-  main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base
-                     , prototype
-  default-language:    Haskell2010
-
-test-suite prototype-test
+test-suite proto-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
-                     , prototype
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
   type:     git
-  location: https://github.com/githubuser/prototype
+  location: https://github.com/topos-house/prototype
