--- a/prototype.cabal
+++ b/prototype.cabal
@@ -5,7 +5,7 @@ description:         Please see README.md
 homepage:            http://github.com/topos-house/prototype
 license:             BSD3
 license-file:        LICENSE
-author:              Sebastian Zany, Joseph Cpx
+author:              Sebastian Zany, Joseph Cox
 maintainer:          abovemind@gmail.com
 -- copyright:           
 category:            Web
